fixing alignment on about me page

--- a/src/App.css
+++ b/src/App.css
@@ -5,27 +5,38 @@
   text-align: left;
 }
 
-body { 
-  background-color: #c8d9ee; }
+.text-wrapper { 
+  display: flex; 
+}
 
-.container {
+.aboutMe {
   display: flex;
-  justify-content: start;
+  justify-content: center;
   align-items: center;
 }
 
-.container img, .container p {
-  flex-grow: 0;
+.textAbout {
+  font-size: 20px;
+  padding-left: 20px;
+  text-align: left;
 }
 
-.container img {
+
+.avatarPic {
+  max-width: 70%;
+  max-height:70%;
+  padding: 60px;
+ text-align: right;
+}
+
+/* .container img {
   width: 110px;
   height: 110px;
   max-width: 100%;
   max-height: 100%;
   align-items: right;
   padding: 40px;
-}
+} */
 
 .container p {
   margin-left: 40%;
